Alignment Issues

--- a/css/board.css
+++ b/css/board.css
@@ -1,6 +1,6 @@
 .dboard {
     display: block;
-    height: 120vh;
+    height: 130vh;
     scroll-margin-top: 150px;
 }
 
